idk try to fix image size on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -197,8 +197,8 @@ button:focus-visible {
 
     img,
     .windowImg {
-      width: inherit;
-      height: inherit;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
   }
